@@ -7,8 +7,9 @@ import java.util.*;
 
 public class GameService {
 
+    //todo вывод, банки (all-in)
+
     private final Map<CombinationType, ICombinationService> combinationServiceMap;
-    private Game game;
 
     public GameService() {
         combinationServiceMap = new LinkedHashMap<>();
@@ -24,25 +25,25 @@ public class GameService {
         combinationServiceMap.put(CombinationType.HIGH_CARD, new HighCardCombinationService());
     }
 
-    public Game createGame(LinkedList<Player> players) {
+    public Game createGame(ArrayList<Player> players) {
         Game game = new Game();
-        setGame(game);
-        game.setPlayerLinkedList(players);
+        game.setPlayerList(players);
 
         DeckService deckService = new DeckService();
         deckService.createDeck(game.getDeck());
 
-        playGame();
+        playGame(game);
 
         return game;
     }
 
-    public void playGame() {
+    public void playGame(Game game) {
         //начальная ставка
-        /*double[] blinds = makeBlinds(game.getPlayerLinkedList());
-        for (int i = 0; i < Objects.requireNonNull(blinds).length; i++) {
-            game.setBank(game.getBank() + blinds[i]);
-        }*/
+        double[] blinds = makeBlinds(game);
+        if (blinds == null) {
+            System.out.println("GAME OVER");
+            return;
+        }
 
         //раздача карт
         for(Player p: game.getPlayerLinkedList()) {
@@ -53,47 +54,43 @@ public class GameService {
         }
 
         for (Player p : game.getPlayerLinkedList()) {
-            game.getActionsPlayers().put(p, new Bet(BetType.CHECK, 0.0));
+            if (!game.getActionsPlayers().containsKey(p)) {
+                game.getActionsPlayers().put(p, new Bet(BetType.CHECK, 0.0));
+                game.getPots().put(p, 0.0);
+            }
         }
-        game.getActionsPlayers().put(game.getPlayerLinkedList().get(0), new Bet(BetType.BET, 10.0));
 
         //step & bet
-        ActionService actionService = new ActionService(10.0);
+        ActionService actionService = new ActionService(blinds[1]);
         for (StepType s: StepType.values()) {
             System.out.println(s);
             if(s != StepType.PRE_FLOP) {
-                getStepCards();
+                getStepCards(game);
                 System.out.println(game.getCardsStep().get(s));
             }
             System.out.println();
             //высчитывает комбинации каждого игрока
-            getPlayerCombination(s);
+            getPlayerCombination(s, game);
             int i = 0;
-            if (s == StepType.PRE_FLOP) i = 1;
+            //if (s == StepType.PRE_FLOP) i = 2;
             while (actionService.getCountCheck() != game.getPlayerLinkedList().size() & game.getPlayerCombination().size() > 1) {
                 if(!game.getActionsPlayers().get(game.getPlayerLinkedList().get(i)).getBetType().equals(BetType.ALL_IN)) {
                     Player player = game.getPlayerLinkedList().get(i);
                     Player prevPlayer = game.getPlayerLinkedList().get((i == 0) ? (game.getPlayerLinkedList().size() - 1) : (i - 1));
                     Bet newBet = actionService.makeBet(player, game.getPlayerCombination().get(player).getType(), game.getActionsPlayers().get(player),
-                            game.getActionsPlayers().get(prevPlayer), s);
+                            game.getActionsPlayers().get(prevPlayer));
                     game.getActionsPlayers().put(player, newBet);
                     player.setPot(player.getPot() - newBet.getBet());
-                    game.setBank(game.getBank() + newBet.getBet());
+                    game.getPots().put(player, newBet.getBet() + game.getPots().get(player));
 
-                    System.out.println(player.getName());
-                    System.out.println(player.getPot());
-                    System.out.println(game.getPlayerCombination().get(player).getType());
-                    System.out.println(game.getPlayerCombination().get(player).getCardList());
-                    System.out.println(newBet.getBetType());
-                    System.out.println(newBet.getBet());
-                    System.out.println();
+                    printStep(game, player, newBet);
 
                     if (newBet.getBetType() == BetType.FOLD) {
                         game.getPlayerCombination().remove(player);
                         game.getPlayerLinkedList().remove(player);
                     }
                     if (newBet.getBetType() == BetType.ALL_IN) {
-                        game.getSidePots().put(player, newBet.getBet());
+                        game.getPots().put(player, newBet.getBet());
                         game.getPlayerLinkedList().remove(player);
                         if (game.getPlayerLinkedList().size() == 1) break;
                     }
@@ -113,17 +110,19 @@ public class GameService {
             }
         }
         //вскрытие
-        Player winner = getWinner(game.getPlayerCombination(), game.getCardsPlayers());
-        if (game.getSidePots().containsKey(winner)) {
-            winner.setPot(game.getBank() - game.getActionsPlayers().size() * game.getSidePots().get(winner));
-            //доделать про all-in
-        } else winner.setPot(winner.getPot() + game.getBank());
-        game.setBank(0.0);
+        Player winner = getWinner(game.getPlayerCombination(), game.getCardsPlayers(), game.getPlayerLinkedList());
+        for (Map.Entry<Player, Double> p : game.getPots().entrySet()) {
+            if (p.getValue() <= game.getPots().get(winner)) {
+                winner.setPot(winner.getPot() + p.getValue());
+            } else {
+                winner.setPot(game.getPots().get(winner));
+                p.getKey().setPot(p.getValue() - game.getPots().get(winner));
+            }
+        }
         System.out.println("Winner: " + winner.getName());
         System.out.println(winner.getPot());
         System.out.println(game.getPlayerCombination().get(winner).getType());
         System.out.println(game.getPlayerCombination().get(winner).getCardList());
-        //после добавить опять всех игроков в список, проверив их на банкротство и игра еще раз
     }
 
 
@@ -150,7 +149,7 @@ public class GameService {
         else return cardsPlayer.get(1);
     }
 
-    private void getPlayerCombination(StepType s) {
+    private void getPlayerCombination(StepType s, Game game) {
         for(Player p: game.getPlayerLinkedList()){
             List<Card> unionCard = new LinkedList<>();
             if (s != StepType.PRE_FLOP) {
@@ -161,8 +160,8 @@ public class GameService {
         }
     }
 
-    public Player getWinner(Map<Player, Combination> finalCombination, Map<Player, List<Card>> cardsPlayers) {
-        Player winner = game.getPlayerLinkedList().getFirst();
+    public Player getWinner(Map<Player, Combination> finalCombination, Map<Player, List<Card>> cardsPlayers, ArrayList<Player> playerLinkedList) {
+        Player winner = playerLinkedList.get(0);
         for (Map.Entry<Player, Combination> p: finalCombination.entrySet()){
             if (p.getValue().compareTo(finalCombination.get(winner)) > 0) {
                 winner = p.getKey();
@@ -176,7 +175,7 @@ public class GameService {
         return winner;
     }
 
-    private void getStepCards() {
+    private void getStepCards(Game game) {
         List<Card> cards = new ArrayList<>();
         if (game.getCardsStep().isEmpty()) {
             for (int i = 0; i < 3; i++) {
@@ -189,20 +188,36 @@ public class GameService {
         game.getCardsStep().put(StepType.values()[game.getCardsStep().size() + 1], cards);
     }
 
-    private double[] makeBlinds(LinkedList<Player> players) {
-        double smallBlind = players.get(0).getPot() * 0.05;
-        players.get(0).setPot(players.get(0).getPot() - smallBlind);
+    private double[] makeBlinds(Game game) {
+        double smallBlind = game.getPlayerLinkedList().get(0).getPot() * 0.05;
+        Player first = game.getPlayerLinkedList().get(0);
+        first.setPot(game.getPlayerLinkedList().get(0).getPot() - smallBlind);
+        Bet small = new Bet(BetType.SMALL_BLIND, smallBlind);
+        game.getActionsPlayers().put(first, small);
+        game.getPots().put(first, smallBlind);
+        printStep(game, first, small);
         double bigBlind = smallBlind * 2;
-        for (int i = 1; i < players.size(); i++) {
-            if (bigBlind < players.get(i).getPot()) {
-                players.get(i).setPot(players.get(i).getPot() - bigBlind);
+        for (int i = 1; i < game.getPlayerLinkedList().size(); i++) {
+            if (bigBlind < game.getPlayerLinkedList().get(i).getPot()) {
+                game.getPlayerLinkedList().get(i).setPot(game.getPlayerLinkedList().get(i).getPot() - bigBlind);
+                Bet big = new Bet(BetType.BIG_BLIND, bigBlind);
+                game.getActionsPlayers().put(game.getPlayerLinkedList().get(i), big);
+                printStep(game, game.getPlayerLinkedList().get(i), big);
+                game.getPots().put(game.getPlayerLinkedList().get(i), bigBlind);
                 return new double[]{smallBlind, bigBlind};
+            } else {
+                System.out.println(game.getPlayerLinkedList().get(i) + "can`t call big blind");
+                game.getPlayerLinkedList().remove(game.getPlayerLinkedList().get(i));
+                i--;
             }
         }
         return null;
     }
 
-    public void setGame(Game game) {
-        this.game = game;
+    private void printStep(Game game, Player player, Bet newBet) {
+        System.out.println(player);
+        if (game.getPlayerCombination().containsKey(player))
+        System.out.println(game.getPlayerCombination().get(player));
+        System.out.println(newBet);
     }
 }
